Now It Works!!!

--- a/app/views/questions/index.html.haml
+++ b/app/views/questions/index.html.haml
@@ -1,6 +1,6 @@
 .container-fluid
   .jumbotron.text-center
-    %h1 StackJoeverFlow
+    %h1 StackJFlow
     = image_tag("mario-block.png", size: "50x50")
 
   .nav-justified
