--- a/app/views/questions/show.html.haml
+++ b/app/views/questions/show.html.haml
@@ -1,6 +1,6 @@
 .container-fluid
   .jumbotron.text-center
-    %h1 StackJoeverFlow
+    %h1 StackJFlow
     = image_tag("mario-block.png", size: "50x50")
 
   = link_to 'Back', questions_path, class: "btn btn-default"
@@ -34,5 +34,5 @@
           %strong= "Posted by: #{answer.user.username}"
           %p= markdown(answer.body)
           - if answer.user_id == session[:current_user_id]
-            = link_to 'Edit', edit_answer_path(answer), class: "btn btn-primary"
-            = link_to 'Delete', answer_path(answer), method: :delete, data: {confirm: 'Delete this answer?'}, class: "btn btn-primary"
+            = link_to 'Edit', edit_question_answer_path(answer), class: "btn btn-primary"
+            = link_to 'Delete', question_answer_path(answer), method: :delete, data: {confirm: 'Delete this answer?'}, class: "btn btn-primary"
