--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,6 +4,8 @@
     = csrf_meta_tags
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
+    = evil_icons_sprite
     %meta{:content => "width=device-width, initial-scale=1", :name => "viewport"}/
   %body
+    = render :partial => 'layouts/header'
     = yield
