--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,7 +1,7 @@
 .jumbotron.text-center
   %a.logo-link{:href => "#"}
-    %h1 StackJFlow
-    = image_tag("mario-block.png", size: "50x50")
+    %h1 RoQIT Box
+    = image_tag("mario-block.png", size: "100x100")
 %nav.navbar.navbar-expand-lg.navbar-dark
   %button.navbar-toggler{"aria-controls" => "navbarNav", "aria-expanded" => "false", "aria-label" => "Toggle navigation", "data-target" => "#navbarNav", "data-toggle" => "collapse", :type => "button"}
     %span.navbar-toggler-icon
