--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -43,11 +43,65 @@ nav {
 }
 
 body {
-  background-color: #6C6F7D;
+  background-image: url('https://upload.wikimedia.org/wikipedia/commons/d/d0/BigdipISS.jpg');
+  height: 100%;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  font-family: 'Russo One', sans-serif;
 }
 
 .mainbox {
   margin: 0;
   background-color: white;
   padding: 20px;
+}
+
+#pro-link {
+  color: white;
+  text-shadow: -2px 0 indigo, 0 2px indigo, 2px 0 indigo, 0 -2px indigo;
+
+  &:hover, &:focus {
+    color: indigo;
+    text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
+  }
+
+}
+
+.quest-card {
+  margin-top: 30px;
+  margin-bottom: 30px;
+  background: #1F101D;
+  box-shadow: 0 4px 8px 0 #DF66A0, 0 6px 20px 0 #46C7E2;
+  font-family: 'Russo One', sans-serif;
+  color: white;
+  .quest-link {
+    color: white;
+    text-shadow: -2px 0 indigo, 0 2px indigo, 2px 0 indigo, 0 -2px indigo;
+
+    &:hover, &:focus {
+      color: indigo;
+      text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
+    }
+  }
+}
+
+#comm-header {
+  font-family: 'Russo One', sans-serif;
+  color: indigo;
+  text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
+}
+
+#footer {
+  a {
+    color: indigo;
+    text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
+  }
+}
+
+.nav-item {
+  p {
+    color: white;
+  }
 }
